# slack_serverless

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: basic_app.rs  lambda_deployment.rs  oauth_app.rs
src/: error.rs  lib.rs
src/adapter/: aws_lambda.rs  mod.rs
src/app/: builder.rs  config.rs  mod.rs
src/client/: mod.rs
src/context/: ack.rs  mod.rs
src/listener/: action.rs  command.rs  event.rs  message.rs  mod.rs  shortcut.rs
src/middleware/: auth.rs  logging.rs  mod.rs
src/oauth/: dynamodb_store.rs  flow.rs  installation_store.rs  mod.rs  state_store.rs
src/request/: mod.rs
src/response/: mod.rs
