[package]
name = "slack_serverless"
version = "0.1.0"
edition = "2021"
description = "A serverless framework for creating Slack apps in Rust, deployed on AWS Lambda with DynamoDB"
license = "MIT"
keywords = ["slack", "serverless", "aws", "lambda", "bot"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# AWS SDK
aws-sdk-dynamodb = "1.0"
aws-config = "1.0"
lambda_runtime = "0.8"
lambda-web = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Crypto for signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# URL handling
url = "2.4"
urlencoding = "2.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Regex for message matching
regex = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[lib]
name = "slack_serverless"
path = "src/lib.rs"

[[example]]
name = "basic_app"
path = "examples/basic_app.rs"

[[example]]
name = "oauth_app"
path = "examples/oauth_app.rs"

[[example]]
name = "lambda_deployment"
path = "examples/lambda_deployment.rs"

[features]
default = ["oauth", "lambda"]
oauth = []
lambda = []